# process-color

./: package.json  pnpm-lock.yaml
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: commands.rs  fetch_processes.rs  lib.rs  logger.rs  main.rs  mqtt.rs  mqtt_settings.rs  process_entry.rs  setup.rs  storage.rs
src/lib/: Button.svelte  IconButton.svelte  ProcessEntryComponent.svelte  Status.svelte  running_states.ts  types.ts
src/lib/icons/: AddIcon.svelte  DeleteIcon.svelte  EditIcon.svelte  ExitIcon.svelte  SaveIcon.svelte
src/routes/: +page.svelte
src/routes/settings/: +page.svelte
