[package]
name = "process-color"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "process_color_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sysinfo = { version = "0.33.1", default-features = false, features = [
    "system",
] }
paho-mqtt = { version = "0.13.0", default-features = false, features = [
    "bundled",
    "ssl",
] }
tauri-plugin-dialog = { version = "2", default-features = false }
bincode = { version = "1.3.3", default-features = false }
chrono = { version = "0.4.39", default-features = false, features = ["clock"] }


[profile.dev]
debug = 0
strip = "debuginfo"
incremental = true

[profile.release]
codegen-units = 1
lto = true
opt-level = 3
panic = "abort"
strip = true

[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
tauri-plugin-autostart = "2"
